# webtunes-importer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/arch/: PKGBUILD
packaging/linux/: nfpm.yaml  webtunes-importer.desktop
packaging/macos/: entitlements.plist  icon.icns
packaging/pyinstaller/: webtunes-importer.spec
packaging/windows/: installer.iss
scripts/: make_icons.py
src/webtunes_importer/: __init__.py  __main__.py  app.py  config.py  constants.py
src/webtunes_importer/core/: apple_music.py  download.py  jobs.py  matching.py  models.py  queue_model.py  ratelimit.py  runtime_deps.py  search.py  spotify.py  webtunes.py
src/webtunes_importer/gui/: links_tab.py  main_window.py  search_tab.py  setup_tab.py  theme.py  widgets.py  worker.py
tests/: test_config.py  test_gui_smoke.py  test_jobs.py  test_matching.py  test_queue_model.py  test_runtime_deps.py  test_url_parsing.py  test_webtunes_client.py
