[project]
name = "webtunes-importer"
version = "0.1.0"
description = "Desktop importer for WebTunes: download tracks from Spotify, Apple Music, or YouTube links and add them to your WebTunes library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PySide6-Essentials>=6.7",
    "yt-dlp>=2025.1.12",
    "requests>=2.31",
    "platformdirs>=4.0",
]

[project.gui-scripts]
webtunes-importer = "webtunes_importer.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.8",
    "pyinstaller>=6.10",
    "pillow>=12.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webtunes_importer"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
